<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bivashpandey.dr.SignUpForm">

    <EditText
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="67dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="46dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/firstName" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/firstName"
        android:layout_alignStart="@+id/firstName"
        android:layout_below="@+id/firstName"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/lastName"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lastName"
        android:layout_alignStart="@+id/lastName"
        android:layout_below="@+id/lastName"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/emailHint"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/email"
        android:layout_alignRight="@+id/email"
        android:layout_below="@+id/email"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/passwordHint"/>

    <EditText
        android:id="@+id/repassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password"
        android:layout_below="@+id/password"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/repasswordhint"/>

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/repassword"
        android:layout_alignStart="@+id/repassword"
        android:layout_below="@+id/repassword"
        android:layout_marginLeft="62dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="36dp"
        android:text="@string/submitButton" />


</RelativeLayout>
