<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bivashpandey.dr.MainActivity">

    <ImageView
        android:id="@+id/appImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        app:srcCompat="@drawable/apptitle" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/emailHint"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email"
        android:layout_alignStart="@+id/email"
        android:layout_below="@+id/email"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/passwordHint"/>

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/password"
        android:layout_alignLeft="@+id/password"
        android:layout_alignRight="@+id/password"
        android:layout_alignStart="@+id/password"
        android:layout_below="@+id/password"
        android:layout_marginTop="27dp"
        android:text="@string/signInButton" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/buttonSignIn"
        android:layout_alignLeft="@+id/buttonSignIn"
        android:layout_alignRight="@+id/buttonSignIn"
        android:layout_alignStart="@+id/buttonSignIn"
        android:layout_below="@+id/buttonSignIn"
        android:layout_marginTop="31dp"
        android:text="@string/signUpButton" />
</RelativeLayout>
